<resources>
    <string name="app_name">NeNoons</string>
    <string name="title_home">홈</string>
    <string name="title_care">케어</string>
    <string name="title_my">더보기</string>
    <string name="title_exercise">눈운동</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="face_detector_dependency_error">Face detector dependencies are not yet available</string>
    <string name="account_hello_title">환영합니다.</string>
    <string name="account_hello_subtitle">눈 건강 테스트 후 눈 운동을 하여 \n눈을 건강하게 관리하세요.</string>
    <string name="account_hello_btn_login">로그인</string>
    <string name="account_hello_btn_join">가입하기</string>
    <string name="account_login_title">Log In</string>
    <string name="account_login_email">e-mail</string>
    <string name="account_login_email_hint">Your e-mail</string>
    <string name="account_login_pass">Password</string>
    <string name="account_login_pass_hint">Your Password</string>
    <string name="account_login_save_login">로그인 기억하기</string>
    <string name="account_login_btn">로그인</string>
    <string name="account_login_other">또는</string>
    <string name="account_login_forget">아이디/비밀번호를 잊으셨나요?</string>
    <string name="account_join_tos_title">앱 사용을 위해\n아래 항목에 동의바랍니다.</string>
    <string name="account_join_tos"></string>
    <string name="account_join_tos_agree">동의</string>
    <string name="account_join_id_title">Sign Up</string>
    <string name="account_join_id_email">e-mail</string>
    <string name="account_join_id_email_hint">Your e-mail</string>
    <string name="account_join_id_pass">Password</string>
    <string name="account_join_id_pass_hint">Your Password</string>
    <string name="account_join_id_pass_conf_hint">Password</string>
    <string name="account_join_id_other">메신져로 간편가입하세요.</string>
    <string name="account_join_id_next">다음</string>
    <string name="account_join_id_pass_compare_ok">일치</string>
    <string name="account_join_id_pass_compare_no">불일치</string>
    <string name="account_join_profile_title">가입하기</string>
    <string name="account_join_profile_profile">프로필 설정</string>
    <string name="account_join_profile_name">이름</string>
    <string name="account_join_profile_gender">성별</string>
    <string name="account_join_profile_gender_male">남성</string>
    <string name="account_join_profile_gender_female">여성</string>
    <string name="account_join_profile_birthday">생년월일</string>
    <string name="account_join_profile_job">직업</string>
    <string name="account_join_profile_phone">핸드폰 번호</string>
    <string name="account_join_profile_content">사용자의 정보에따라 눈 건강 테스트 결과값이 다를 수 있으니
        \n원활한 테스트를 진행을 위해서 본인의 정보를 입력해주세요.</string>
    <string name="account_join_survey_title">사용자 정보</string>
    <string name="account_join_survey_glasses">안경을 쓰시나요?</string>
    <string name="account_join_survey_glasses_a_1">네</string>
    <string name="account_join_survey_glasses_a_2">아니요</string>
    <string name="account_join_survey_glasses_a_3">때때로</string>
    <string name="account_join_survey_left">시력 좌</string>
    <string name="account_join_survey_right">시력 우</string>
    <string name="account_join_survey_status">근시/정시/난시 인가요?</string>
    <string name="account_join_survey_status_a_1">근시</string>
    <string name="account_join_survey_status_a_2">정시</string>
    <string name="account_join_survey_status_a_3">난시</string>
    <string name="account_join_survey_surgery">눈 관련 수술을 하신적이 있나요?</string>
    <string name="account_join_survey_surgery_a_1">난시 교정</string>
    <string name="account_join_survey_surgery_a_2">노안 교정</string>
    <string name="account_join_survey_surgery_a_3">백내장 수술</string>
    <string name="account_join_survey_surgery_a_4">기타</string>
    <string name="account_join_survey_exercise">평소에 눈운동을 하시나요?</string>
    <string name="account_join_survey_exercise_a_1">네</string>
    <string name="account_join_survey_exercise_a_2">아니요</string>
    <string name="account_join_survey_exercise_a_3">때때로</string>
    <string name="account_join_survey_food">눈 건강 보조식품을 드시나요?</string>
    <string name="account_join_survey_food_a_1">네</string>
    <string name="account_join_survey_food_a_2">아니요</string>
    <string name="account_join_survey_food_a_3">때때로</string>
    <string name="test_dialog_first_title">아이랩에 처음 오셨나요?\n먼저, 나의 눈 상태를 알아보세요.</string>
    <string name="test_dialog_first_btn_ok">눈 건강 테스트하기</string>
    <string name="test_dialog_first_btn_no">둘러보기</string>
    <string name="test_dialog_warning_title">잠깐! 아이랩의 눈 건강 테스트는 시기능연구소 연구원들의 의견을 토대로 만들어진 간이 테스트입니다.좀 더 정확한 진단을 원하신다면 안경점 또는 안과에 방문하여 전문가의 진단받으시길 바랍니다.</string>
    <string name="test_dialog_warning_btn_ok">테스트 하기</string>
    <string name="test_dialog_warning_btn_no">취소</string>
    <string name="test_guide_title_01">한쪽</string>
    <string name="test_guide_title_02">거리</string>
    <string name="test_guide_01">아이랩 눈 건강 굴절력 테스트는\n오른쪽 눈, 왼쪽 눈 따로 진행합니다.\n눈을 가릴 안대를 준비해주세요.</string>
    <string name="test_guide_02">팔을 최대한 길게 뻗어 눈과 스마트폰\n사이의 거리를 넓혀주세요.</string>
    <string name="test_guide_03">카메라가 눈 사이를 인식하여 사용자\n와의 거리를 측정합니다. 문자표가 \n흐리게 보일 때까지 스마트폰과의\n 거리를 가깝게 당겨주세요.</string>
    <string name="test_guide_04">시표가 흐리게 보일 때까지 스마트폰과의\n거리를 가깝게 당겨 5초안에 멈춰주세요.</string>
    <string name="test_sample">다람쥐 헌 쳇바퀴에 타고파</string>
    <string name="test_add_contents">
        공통텍스트
        \n[거리측정테스트]
        \n0.0디옵터 : 건강한 눈을 가지셨어요.
        \n0.0디옵터 : 눈관리가 조금 필요해요.
        \n0.0디옵터 : 눈운동을 꾸준히 하셔야해요.
        \n0.0디옵터 : 건강하지 못한 눈이에요.
        \n0.0디옵터 : 당장 안과에 찾아가보셔야해요!
        \n
        \n[적녹테스트]
        \n빨강 선택 ‘근시’
        \n녹색 선택 ‘원시’
        \n비슷하게 보였다면 ‘정시’
        \n
        \n[대비감도테스트]
        \n야간 운전이 힘듭니다.
        \n야간에 불편을 느낄 수 있어요.
        \n백내장, 약시 질환이 있을 수 있으니 안과를 가보시는 것을 추천해요.
        \n
        \n[컬러오버레이]
        \n
        \n[폰트]
        \n
    </string>
</resources>