<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pixelro.eyelab.menu.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_exercise"
        android:name="com.pixelro.eyelab.menu.exercise.ExerciseFragment"
        android:label="@string/title_exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/navigation_care"
        android:name="com.pixelro.eyelab.menu.care.CareFragment"
        android:label="@string/title_care"
        tools:layout="@layout/fragment_care" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.pixelro.eyelab.menu.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />

    <fragment
        android:id="@+id/navigation_care_map"
        android:name="com.pixelro.eyelab.menu.map.MapsFragment"
        tools:layout="@layout/fragment_maps" />

</navigation>
