<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <Button
        android:id="@+id/button_arrow_back"
        android:layout_width="8dp"
        android:layout_height="14dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_arrow_back_background"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_account_profile_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_xs_b"
        android:text="다음"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.35000002" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/account_join_id_title"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_account_profile_name"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/account_join_profile_name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/editText_account_profile_gender"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/editText_account_profile_gender"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/account_join_profile_gender"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_profile_name" />

    <EditText
        android:id="@+id/editText_account_profile_birthday"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/account_join_profile_birthday"
        android:inputType="none"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_profile_gender" />

    <EditText
        android:id="@+id/editText_account_profile_job"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/account_join_profile_job"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_profile_birthday" />

    <EditText
        android:id="@+id/editText_account_profile_phone"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/account_join_profile_phone"
        android:inputType="phone"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_profile_job" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/account_join_profile_profile"
        android:textColor="#6b6c6f"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_account_profile_name"
        app:layout_constraintStart_toStartOf="@+id/editText_account_profile_name" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/account_join_profile_content"
        android:textColor="#5d7292"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_account_profile_phone"
        app:layout_constraintStart_toStartOf="@+id/editText_account_profile_phone"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_profile_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>