<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".account.AccountActivity">

    <Button
        android:id="@+id/button_arrow_back"
        android:layout_width="8dp"
        android:layout_height="14dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> 

    <Button
        android:id="@+id/button_arrow_back_background"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_account_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_l_w_edit"
        android:ems="10"
        android:hint="@string/account_login_email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/account_login_title"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/account_login_email"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_account_login_email"
        app:layout_constraintStart_toStartOf="@+id/editText_account_login_email" />

    <EditText
        android:id="@+id/editText_account_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_l_w_edit"
        android:ems="10"
        android:hint="@string/account_login_pass_hint"
        android:inputType="textPassword"
        android:paddingStart="20sp"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@+id/editText_account_login_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_login_email" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/account_login_pass"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_account_login_password"
        app:layout_constraintStart_toStartOf="@+id/editText_account_login_password" />

    <Switch
        android:id="@+id/switch_account_login_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/account_login_save_login"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_account_login_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_login_password" />

    <Button
        android:id="@+id/button_account_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_l_b"
        android:enabled="false"
        android:text="@string/account_login_btn"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editText_account_login_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_account_login_password" />

    <View
        android:id="@+id/view"
        android:layout_width="148dp"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:background="#dcdcdc"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/account_login_other"
        android:textColor="#9b9b9b"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/button_account_login_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_account_login_login"
        app:layout_constraintTop_toBottomOf="@+id/button_account_login_login" />

    <View
        android:id="@+id/view2"
        android:layout_width="148dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:background="#dcdcdc"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView_account_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:text="@string/account_login_forget"
        android:textColor="#9b9b9b"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView_account_login_forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <ImageButton
            android:id="@+id/imageButton_account_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="#00000000"
            android:src="@drawable/account_login_bnt_facebook"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_account_login_google"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton_account_login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/account_login_bnt_qq"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_account_login_kakao"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_account_login_google"
            app:layout_constraintTop_toTopOf="@+id/imageButton_account_login_google" />

        <ImageButton
            android:id="@+id/imageButton_account_login_kakao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/account_login_bnt_kakao"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_account_login_naver"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_account_login_qq"
            app:layout_constraintTop_toTopOf="@+id/imageButton_account_login_qq" />

        <ImageButton
            android:id="@+id/imageButton_account_login_naver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/account_login_bnt_naver"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_account_login_wechat"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_account_login_kakao"
            app:layout_constraintTop_toTopOf="@+id/imageButton_account_login_kakao" />

        <ImageButton
            android:id="@+id/imageButton_account_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/account_login_bnt_google"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_account_login_qq"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_account_login_facebook"
            app:layout_constraintTop_toTopOf="@+id/imageButton_account_login_facebook" />

        <ImageButton
            android:id="@+id/imageButton_account_login_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="#00000000"
            android:src="@drawable/account_login_bnt_wechat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton_account_login_naver"
            app:layout_constraintTop_toTopOf="@+id/imageButton_account_login_naver" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>